--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 numpy = "^1.19.5"
 pandas = "^1.2.0"
 jupyterlab = "^3.0.5"
+matplotlib = "^3.3.3"
 
 [tool.poetry.dev-dependencies]
 
